@@ -550,3 +550,7 @@ Released April 26, 2007
   May 28, 2007 - Fix conversion errors in channel -> screens whas moving
                  the dispay of summing errors around.
   May 30, 2007 - Fix up gate locations to match the 3.2 branch.
+  June 6, 2007 - Ensure that Xamine superposition prompt messages will display
+                 by making them children of the parent of the dialog rather
+                 than children of the dialog (which gets hidden when
+                 Xamine_error_msg is called).
